--- a/login.html
+++ b/login.html
@@ -6,14 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SwooshX Login</title>
     <link rel="stylesheet" href="style.css">
-    
 </head>
 <body>
 <div class="wrapper">
     <div class="form_box login">
         <h2>Login</h2>
-
-      
 
         <!-- Login Form -->
         <form action="login.php" method="POST">
@@ -29,7 +26,7 @@
                 <label>
                     <input type="checkbox"> Remember Me?
                 </label>
-                <a href="#">Forgot Password?</a>
+                <a href="forget_password.php">Forgot Password?</a>
             </div>
             <button type="submit" class="btn">Login</button>
             <div class="login-register">
